# KBIMPORTER

./: .env.example  .gitignore  CONTEXT.md  pyproject.toml  requirements.txt
config/: correction_dict.json  correction_dict.md  routes.json  targets.json
docs/: prd-architecture-improvements.md
docs/adr/: 0001-sync-audio-split-by-automation.md
kbimporter/: __main__.py  biji_api.py  cleaner.py  cli.py  config.py  correction_dict.py  douyin_resolver.py  import_writer.py  models.py  recipe_writer.py  router.py  watermark.py
tests/: test_import_writer.py  test_router.py  test_watermark.py
