[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kbimporter"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "notion-client>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kbimporter = "kbimporter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.ruff]
line-length = 100
